--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-cloudinary": "^6.17.5",
