--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "go-study",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,7 +16,6 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-cloudinary": "^6.17.5",
